<resources>
    <string name="app_name">EventApp</string>
    <string name="ivana">Ivana</string>
    <string name="filters">Filters</string>
    <string name="category">Category</string>
    <string name="subcategory">Subcategory</string>
    <string name="eventtype">Event type</string>
    <string name="available">Available</string>
    <string name="price">Price</string>
    <string name="from">From</string>
    <string name="To">To</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="description">Description:</string>
    <string name="apply">APPLY</string>


    <string name="photo_album">Photo album</string>
    <string name="details">Details</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="sign_up_as_organizer">Organizer</string>
    <string name="sign_up_as_provider_of_duties_and_products_owner">Provider - owner</string>
    <string name="continue_without_registration">Continue without registration</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="login_text">Login</string>
    <string name="login_button">Login</string>
    <string name="sign_up_as">Sign up as:</string>
    <string name="logout">Log out</string>
    <string name="registration">Registration</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name:</string>
    <string name="surname">Surname</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="streetN">Street Number</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="profile_picture">Profile picture</string>
    <string name="upload_photo">Upload photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_date_range">Choose date range</string>
    <string name="availability">Availability</string>
    <string name="not_available">Not Available</string>
    <string name="all">All</string>
    <string name="profile_photo">Profile photo</string>
    <string name="employees">Employees</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="next">Next</string>
    <string name="company_info">Company info</string>
    <string name="about_company">About Company</string>
    <string name="upload_photos">Upload photos</string>
    <string name="event_types">Event types:</string>
    <string name="categories">Categories:</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="other_data">Other data</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="working_time">Working time</string>
    <string name="organizer_registration">Organizer registration</string>
    <string name="provider_owner_registration">Provider-owner registration</string>
    <string name="offerings_selection">Offerings selection</string>
    <string name="working_hours">Working hours</string>
    <string name="subcategories">Subcategories</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="categories_capital">CATEGORIES</string>
    <string name="log_out_capital">LOG OUT</string>
    <string name="add">Add</string>
    <string name="description1">Description</string>
    <string name="new_category">New category</string>
    <string name="edit_category">Edit category</string>
    <string name="new_subcategory">New subcategory</string>
    <string name="edit_subcategory">Edit subcategory</string>
    <string name="type">Type:</string>
    <string name="subcategory_type">Subcategory type:</string>
    <string name="subcategories1">Subcategories</string>
    <string name="deactivate">Deactivate</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="settings">Settings</string>
    <string name="subcategory_suggestions">SUBCATEGORY SUGGESTIONS</string>
    <string name="services">SERVICES</string>
    <string name="events">EVENTS</string>
    <string name="employees1">EMPLOYEES</string>
    <string name="products">PRODUCTS</string>
    <string name="category1">Category:</string>
    <string name="add_existing_subcategory">Add existing subcategory</string>
    <string name="accept">accept</string>
    <string name="choose_existing_subcategory">Choose existing subcategory</string>
    <string name="activate">Activate</string>
    <string name="event_types1">EVENT TYPES</string>
    <string name="new_event_type">New event type</string>
    <string name="suggested_subcategories">Suggested subcategories</string>
    <string name="subcategories2">Subcategories</string>
    <string name="name1">Name</string>
    <string name="home_page">HOME PAGE</string>
    <string name="date_range">Date Range</string>
    <string name="select_types">Select Event Types</string>
    <string name="select_cat">Select Categories</string>
    <string name="select_subcat">Select Subcategories</string>
    <string name="exit">Exit</string>
    <string name="location">Location</string>
    <string name="max_kms">Maximum km</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="create_event">Create Event</string>
    <string name="maxNumberOfParticipants">Participants</string>
    <string name="is_event_private">This event is private</string>
    <string name="choose_type">Choose type: </string>
    <string name="choose_cat"> Categories: </string>
    <string name="choose_subcat">Subcategories: </string>
    <string name="manage_guest_list">Make guest list </string>
    <string name="manage_budgeting">Manage budgeting</string>
    <string name="manage_agenda">Make agenda</string>
    <string name="create_event_caps">CREATE EVENT</string>
    <string name="budgeting">Budgeting</string>
    <string name="total_budget">Total budget: </string>
    <string name="currency">din.</string>
    <string name="add_subcat">Add subcategory</string>
    <string name="your_items">Your items</string>
    <string name="planned_budget">Planned budget: </string>
    <string name="see_details">See details</string>
    <string name="items">Items</string>
    <string name="delete_budget_subcat">Delete subcategory</string>
    <string name="add_item">Add item</string>
    <string name="suggested">suggested</string>
    <string name="input_price">Input planned budget: </string>
    <string name="manage_events">Manage Events</string>
    <string name="workday">Workday</string>
    <string name="sat1">Sat</string>
    <string name="sun1">Sun</string>
    <string name="status">Status</string>
    <string name="edit_suggestion">Edit suggestion</string>
    <string name="firm_information">Firm information</string>
    <string name="owner_registration">Owner registration</string>
    <string name="plan_it_right">Plan it right!</string>
    <string name="created_date">Created date</string>
    <string name="name_surname">First name/Last name</string>
    <string name="reservations">RESERVATIONS</string>
    <string name="pup_rejected">Rejected by PUP</string>
    <string name="od_rejected">Rejected by OD</string>
    <string name="admin_rejected">Rejected by admin</string>
    <string name="new1">New</string>
    <string name="realized">Realized</string>
    <string name="accepted">Accepted</string>
    <string name="service_name">Service name</string>
    <string name="reject">Reject</string>
    <string name="details1">Details</string>
    <string name="owner_requests">OWNER REQUESTS</string>
    <string name="owner_registration_request">Owner registration request</string>
    <string name="confirm">Confirm</string>
    <string name="type_reason_for_rejecting_request">Type reason for rejecting request</string>

    <string name="first_name">First name </string>
    <string name="last_name">Last name </string>
    <string name="change_pass">CHANGE PASSWORD</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="change_pass2">Change Password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="new_pass2">New Password</string>
    <string name="email">Email:</string>
    <string name="phone">Phone Number: </string>
    <string name="company_type">Type: </string>
    <string name="see_company">COMPANY PROFILE</string>
    <string name="Ratings">Ratings</string>
    <string name="average_rating">Average</string>
    <string name="rate">rate</string>
    <string name="ratings">ratings</string>
    <string name="report">REPORT THIS COMPANY</string>
    <string name="send_message">MESSAGE THIS COMPANY</string>
    <string name="choose_user2">Choose who to message</string>
    <string name="choose">CHOOSE</string>
    <string name="message">➕</string>
    <string name="my_favourites">My Favourites</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="search_firm_owner">Search firm/owner</string>
    <string name="create_agenda">Create Event Agenda</string>
    <string name="new_activity">NEW ACTIVITY</string>
    <string name="is_invited">This guest is invited</string>
    <string name="confirmed">This guest confirmed attendance</string>
</resources>