<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:backgroundTint="@color/page_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/status"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:id="@+id/all"
            android:padding="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new1"
            android:id="@+id/new1"
            android:padding="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pup_rejected"
            android:id="@+id/pup_rejected"
            android:padding="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_rejected"
            android:id="@+id/admin_rejected"
            android:padding="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accepted"
            android:id="@+id/accepted"
            android:padding="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/realized"
            android:id="@+id/realized"
            android:padding="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/od_rejected"
            android:id="@+id/od_rejected"
            android:padding="10dp"/>
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/apply"
        android:id="@+id/apply_filters"
        android:backgroundTint="@color/view_green"/>
</LinearLayout>
