<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/page_background">


        <TextView
        android:id="@+id/textView3"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="37dp"
            android:textColor="@color/view_green"/>

    <androidx.appcompat.widget.SearchView
        app:queryHint="Search"
        android:layout_width="342dp"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="89dp"
        android:layout_gravity="center"
        android:id="@+id/search_bar_filters"
        android:theme="@style/Theme.EventApp"
        android:background="@drawable/border_background"/>

        <Button
            android:id="@+id/spinner_type"
            android:layout_width="342dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/select_types"
            android:backgroundTint="@color/view_green"/>
        <Button
            android:id="@+id/spinner_cat"
            android:layout_width="342dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/select_cat"
            android:backgroundTint="@color/view_green"/>
        <Button
        android:id="@+id/spinner_subcat"
            android:layout_width="342dp"
        android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/select_subcat"
            android:backgroundTint="@color/view_green"/>

        <LinearLayout
            android:layout_width="342dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/price"
                android:gravity="center_vertical"/>

            <com.google.android.material.slider.RangeSlider
                android:layout_width="242dp"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:id="@+id/price_range"/>

            <TextView
                android:layout_width="47dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="5000"
                android:id="@+id/price_max"/>

        </LinearLayout>
        <Button
            android:id="@+id/button_set_date_range"
            android:layout_width="342dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/manage_date_range"
            android:backgroundTint="@color/view_green"/>

        <LinearLayout
            android:layout_width="342dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/availability" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:id="@+id/radio_group">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available"
                    android:id="@+id/available"
                    android:padding="10dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_available"
                    android:id="@+id/not_available"
                    android:padding="10dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:id="@+id/all"
                    android:padding="10dp"
                    />

            </RadioGroup>
        </LinearLayout>

        <Button
            android:layout_width="342dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/apply"
            android:id="@+id/apply_filters"
            android:backgroundTint="@color/view_green"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>